--- a/My-webiste/my-website.html
+++ b/My-webiste/my-website.html
@@ -60,7 +60,7 @@
         </div>
         
         <div class="author-box">
-            <div class="author-name">Burce Moccy</div> <br>
+            <div class="author-name">Arnob Paul</div> <br>
         <div class="author-text">Founder & CEO Alies</div>
         
         <p class="comment-text">
